--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,7 @@
 body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
@@ -45,4 +46,46 @@ body {
   color: #0a0a0a;
   transition: 2s;
   scroll-snap-align: start;
+}
+
+
+
+
+/* CSS for the Contact Form */
+
+/* .contact-container {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+} */
+.form-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.contact-left {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  /* width: 300px; */
+  border: 1px;
+  border-color: white;
+  border-radius: 100px;
+  gap: 20px;
+}
+
+.contact-left-title h2 {
+  color: white;
+  font-size: xx-large;
+  font-weight: bold;
+}
+
+input {
+  background-color: white;
+  opacity: 80%;
+}
+textarea {
+  background-color: white;
+  opacity: 80%;
 }
