--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,6 @@ body {
 
 
 .container {
-  width: 100%;
   height: 100vh;
   overflow-y:scroll ;
   scroll-snap-type: y mandatory;
@@ -53,12 +52,13 @@ body {
 
 /* CSS for the Contact Form */
 
-/* .contact-container {
+.contact-container {
   height: 100vh;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-} */
+}
 .form-container {
   display: flex;
   flex-direction: row;
@@ -69,23 +69,69 @@ body {
   flex-direction: column;
   align-items: start;
   /* width: 300px; */
-  border: 1px;
-  border-color: white;
-  border-radius: 100px;
   gap: 20px;
 }
 
 .contact-left-title h2 {
-  color: white;
-  font-size: xx-large;
-  font-weight: bold;
+  color: rgb(113, 116, 133);
+  font-size: 40px;
+  font-weight: 600;
+  margin-bottom: 5px;
 }
 
-input {
-  background-color: white;
-  opacity: 80%;
+.contact-left-title hr {
+  border: none;
+  width: 120px;
+  height: 5px;
+  border-color: rgb(113, 116, 133);
+  border-radius: 10px;
+  margin-bottom:20px ;
 }
-textarea {
-  background-color: white;
-  opacity: 80%;
+
+
+.contact-inputs {
+  width: 400px;
+  height: 50px;
+  border: none;
+  outline: none;
+  padding-left: 25px;
+  font-weight: 500;
+  border-radius: 35px;
+  background-color: gray;
+  opacity: 60%;
 }
+
+ .contact-left textarea {
+  height: 140px;
+  padding-top: 15px;
+  border-radius: 20px;
+ }
+
+ .contact-inputs:focus{
+  border: 2px solid rgb(158, 86, 146);
+ }
+ 
+ .contact-inputs::placeholder{
+  color: #171717;
+ }
+ .contact-left button{
+  display: flex;
+  align-items: center;
+  padding: 15px 30px;
+  font-size: 16px;
+  color: white;
+  gap: 10px;
+  border: none;
+  border-radius: 50px;
+  background: linear-gradient(270deg, rgb(150, 86, 175), rgb(97, 109, 173));
+  opacity: 40%;
+  cursor: pointer;
+ }
+.contact-left button:hover{
+  opacity: 100%;
+}
+
+ .contact-left button img{
+  height: 30px;
+  width: 30px;
+ }
