--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
 .container {
   height: 100vh;
   overflow-y:scroll ;
@@ -47,7 +46,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 50px;
+  /* gap: 50px; */
   color: #0a0a0a;
   transition: 2s;
   scroll-snap-align: start;
@@ -141,3 +140,10 @@ body {
   height: 30px;
   width: 30px;
  }
+
+ #aboutme {
+  font-family: "ruddy", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+ }
+ 
