--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* :root {
+  --background: #171717;
+  --foreground: #ffffff;
 }
 
 @theme inline {
@@ -17,27 +17,22 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+} */
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 body {
-  /* background-image: url('/public/cherry-bgg.png'); */
-    /* background-size: 1920px 1080px;  */
-    /* background-color: white; */
-    /* background-repeat: no-repeat; */
-    /* image-rendering: pixelated; */
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background: var(--background);
-  color: var(--foreground);
+  background-color: black;
+  color: white;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.container {
-  height: 100vh;
-  overflow-y:scroll ;
-  scroll-snap-type: y mandatory;
-  
+  display: flex;
+  justify-content: center; /* centers .container */
 }
 
 .page {
@@ -46,104 +41,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* gap: 50px; */
-  color: #0a0a0a;
   transition: 2s;
   scroll-snap-align: start;
 }
-
-
-
-
-/* CSS for the Contact Form */
-
-.contact-container {
-  height: 100vh;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-}
-.form-container {
-  display: flex;
-  flex-direction: row;
-}
-
-.contact-left {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  /* width: 300px; */
-  gap: 20px;
-}
-
-.contact-left-title h2 {
-  color: rgb(255, 255, 255);
-  font-size: 40px;
-  font-weight: 600;
-  margin-bottom: 5px;
-}
-
-.contact-left-title hr {
-  border: none;
-  width: 120px;
-  height: 5px;
-  border-color: rgb(113, 116, 133);
-  border-radius: 10px;
-  margin-bottom:20px ;
-}
-
-
-.contact-inputs {
-  width: 400px;
-  height: 50px;
-  border: none;
-  outline: none;
-  padding-left: 25px;
-  font-weight: 500;
-  border-radius: 35px;
-  background-color: gray;
-  opacity: 60%;
-}
-
- .contact-left textarea {
-  height: 140px;
-  padding-top: 15px;
-  border-radius: 20px;
- }
-
- .contact-inputs:focus{
-  border: 2px solid rgb(158, 86, 146);
- }
- 
- .contact-inputs::placeholder{
-  color: #171717;
- }
- .contact-left button{
-  display: flex;
-  align-items: center;
-  padding: 15px 30px;
-  font-size: 16px;
-  color: white;
-  gap: 10px;
-  border: none;
-  border-radius: 50px;
-  background: linear-gradient(270deg, rgb(150, 86, 175), rgb(97, 109, 173));
-  opacity: 40%;
-  cursor: pointer;
- }
-.contact-left button:hover{
-  opacity: 100%;
-}
-
- .contact-left button img{
-  height: 30px;
-  width: 30px;
- }
-
- #aboutme {
-  font-family: "ruddy", sans-serif;
-  font-weight: 900;
-  font-style: normal;
- }
- 
